# florentine_abbot

./: .gitignore  README.md  README.ru.md  calculate_dpi.py  classes.py  pyproject.toml  run_path_workflow.py  run_vuescan_workflow.ini  run_vuescan_workflow.py  run_workflow.py  vuescan.ini  workflow.py
.github/workflows/: build.yml
classes/: arguments.py  calculator.py  parsers.py  workflow.py
classes/VueScan/: workflow.py
examples/workflows/Epson/Perfection V850 Pro/raw/: workflow.ini
examples/workflows/example/: workflow.ini
solidol/image/: exif.py
solidol/log/: log.py
src/florentine_abbot/: batch.py  cli.py  exifer.py  parser.py
src/florentine_abbot/vuescan/: vuescan.ini  workflow.py
src/scan_batcher/: batch.py  calculator.py  cli.py  exifer.py  parser.py  recorder.py  workflow.py
src/scan_batcher/workflows/: __init__.py
src/scan_batcher/workflows/vuescan/: workflow.py
workflow_example/: vuescan.ini  workflow.ini
workflows/epson/Perfection V850 Pro/raw/: vuescan.ini  workflow.ini
workflows/epson/expression 10000xl/raw/: vuescan.ini  workflow.ini
workflows/example/: workflow.ini
