[project]
name = "scan-batcher"
version = "1.0.0"
description = "A utility to automate and optimize scanning workflows using VueScan."
authors = [
    { name="Andrey Nalivayev", email="nalivayev@gmail.com" }
]
keywords = ["vuescan", "scanning", "automation"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = ["piexif"]

[project.scripts]
scan-batcher = "scan_batcher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "scan_batcher",
    "scan_batcher.workflows",
    "scan_batcher.workflows.vuescan"
]

[tool.setuptools.package-data]
"scan_batcher.workflows.vuescan" = ["*.ini"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
